--- a/app/src/main/res/menu/menu_context_record.xml
+++ b/app/src/main/res/menu/menu_context_record.xml
@@ -4,7 +4,5 @@
     <item
         android:id="@+id/action_delete"
         android:icon="@android:drawable/ic_menu_delete"
-        android:iconTint="@color/red"
-        android:title="@string/delete"
-        android:titleTextColor="@color/red" />
+        android:title="@string/delete" />
 </menu>
