finished, commented and optimized

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -16,6 +16,7 @@
         android:ems="10"
         android:hint="@string/email"
         android:inputType="text|textEmailAddress"
+        android:minHeight="48dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
@@ -29,6 +30,7 @@
         android:ems="10"
         android:hint="@string/password"
         android:inputType="textPassword"
+        android:minHeight="48dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
@@ -39,7 +41,7 @@
 
         style="@style/Theme.Button"
         android:layout_width="200dp"
-        android:layout_height="46dp"
+        android:layout_height="48dp"
         android:layout_marginTop="12dp"
         android:text="@string/sign_in"
         android:theme="@style/Theme.Button"
