--- a/app/src/main/res/layout/dialog_balance.xml
+++ b/app/src/main/res/layout/dialog_balance.xml
@@ -37,6 +37,7 @@
                 android:ems="10"
                 android:hint="@string/balance"
                 android:inputType="numberDecimal"
+                android:minHeight="48dp"
                 android:numeric="decimal"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -48,7 +49,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:text="Aceptar"
+                android:text="@string/accept"
                 android:theme="@style/Theme.Button"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
